# base-cli

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/base_cli/: main.py
src/base_cli/command/: hello.py
tests/: test_main.py
