[project]
name = "base-cli"
version = "0.1.0"
description = "Minimal CLI template with latest tooling and strict checks"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.27.0",
]

[project.scripts]
base-cli = "base_cli.main:app"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.32,<0.12"]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "mypy>=2.3.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.16.0",
    "ty>=0.0.63",
    "vulture>=2.16",
    "yamllint>=1.38.0",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.vulture]
paths = ["src", "tests"]
